--- a/.github/workflows/terraform-test.yml
+++ b/.github/workflows/terraform-test.yml
@@ -69,5 +69,5 @@ jobs:
         run: exit 1
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'pull_request' && github.event.pull_request.merged == true
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform -chdir="./env/test" apply -auto-approve
