--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ terraform.rc
 /.idea/vcs.xml
 /env/dev/.terraform.lock.hcl
 /bot_1.py
+config.py
+__pycache__/github_helpers.cpython-311.pyc
+__pycache__/config.cpython-311.pyc
